--- a/webextensions/sidebar/styles/square/plain-color-dark.css
+++ b/webextensions/sidebar/styles/square/plain-color-dark.css
@@ -26,26 +26,26 @@
   background: var(--tab-surface-active-hover);
 }
 
-.tab.active .extra-items-container.behind::before {
+.tab.active .active-marker::before {
   background: var(--tab-active-marker);
   content: "";
   position: absolute;
   top: 0;
 }
 
-:root.left .tab.active:not(.faviconized) .extra-items-container.behind::before {
+:root.left .tab.active:not(.faviconized) .active-marker::before {
   bottom: 0;
   left: 0;
   width: var(--tab-active-marker-size);
 }
 
-:root.right .tab.active:not(.faviconized) .extra-items-container.behind::before {
+:root.right .tab.active:not(.faviconized) .active-marker::before {
   bottom: 0;
   right: 0;
   width: var(--tab-active-marker-size);
 }
 
-.tab.active.faviconized .extra-items-container.behind::before {
+.tab.active.faviconized .active-marker::before {
   height: var(--tab-active-marker-size);
   left: 0;
   right: 0;
