Specify default font size of sidebar UI with system font for message-box #1398

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -79,6 +79,10 @@ button {
 
 /* tabbar */
 
+:root, body {
+  font: message-box; /* this is same to Firefox's UI. */
+}
+
 #tabbar {
   bottom: 0;
   left: 0;
