Reduce width of elipsis for long tab label

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -284,7 +284,7 @@ ul {
 .tab .label {
   flex-grow: 1;
   overflow: hidden;
-  text-overflow: ellipsis;
+  text-overflow: ".."; /*ellipsis*/;
   white-space: nowrap;
 }
 
