Don't shrink close button for indented tabs, on Sidebar skin #1539

--- a/webextensions/sidebar/styles/sidebar/sidebar.css
+++ b/webextensions/sidebar/styles/sidebar/sidebar.css
@@ -111,6 +111,7 @@
 }
 .closebox {
   width: 1.5em;
+  min-width: 1.5em;
   height: 1.5em;
   margin-left: 3px;
   background: url("closetab.png") center center no-repeat;
