Don't refer CSS variable recursively.
Due to this mistake, "vertigo" theme lost its background. #1572

--- a/webextensions/sidebar/styles/square/vertigo-color.css
+++ b/webextensions/sidebar/styles/square/vertigo-color.css
@@ -51,7 +51,7 @@
 
   --throbber-color: var(--browser-bg-lightest, --tab-highlighted-glow);
 
-  background: var(--browser-bg-darker, --tab-surface);
+  background: var(--tab-surface);
 }
 
 .tab,
