--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -87,11 +87,14 @@ button {
   bottom: 0;
   left: 0;
   margin: 0;
-  overflow: auto;
+  overflow: hidden;
   padding: 0;
   position: fixed;
   right: 0;
   top: 0;
+}
+#tabbar.overflow {
+  overflow-y: auto;
 }
 
 :root.animation #tabbar {
