--- a/webextensions/sidebar/styles/square/vertigo-color.css
+++ b/webextensions/sidebar/styles/square/vertigo-color.css
@@ -35,11 +35,16 @@
  * ***** END LICENSE BLOCK ******/
 
 :root {
-  --tab-surface: var(--browser-bg-base, -moz-dialog);
-  --tab-text: var(--browser-fg, -moz-dialogtext);
-  --tab-active-text: var(--browser-fg-active, -moz-dialogtext);
-  --tab-border: var(--browser-bg-more-darker, ThreeDShadow);
-  --tab-dropmarker: var(--browser-fg, -moz-dialogtext);
+  /* https://dxr.mozilla.org/mozilla-central/rev/b056526be38e96b3e381b7e90cd8254ad1d96d9d/browser/themes/windows/browser.css#45 */
+  /* http://design.firefox.com/photon/visuals/color.html */
+  --toolbar-non-lwt-bgcolor: #f9f9fa;
+  --toolbar-non-lwt-textcolor: #0c0c0d;
+
+  --tab-surface: var(--browser-bg-base, var(--toolbar-non-lwt-bgcolor));
+  --tab-text: var(--browser-fg, var(--toolbar-non-lwt-textcolor));
+  --tab-active-text: var(--browser-fg-active, var(--toolbar-non-lwt-textcolor));
+  --tab-border: var(--browser-bg-more-darker, #b1b1b3 /* ThreeDShadow */);
+  --tab-dropmarker: var(--browser-fg, var(--toolbar-non-lwt-textcolor));
 
   --tab-surface-hover: var(--browser-bg-less-lighter, #e0e8f6);
   --tab-surface-active: var(--browser-bg-lighter, #c1d2ee);
