Make drop blocker more wider and invisible

--- a/webextensions/sidebar/styles/drag-and-drop.css
+++ b/webextensions/sidebar/styles/drag-and-drop.css
@@ -64,8 +64,9 @@
 
 
 .tab-drop-blocker {
-  background: black;
   display: none;
+  min-height: calc(var(--favicon-size) / 5);
+  min-width: calc(var(--favicon-size) / 5);
   position: fixed;
 }
 
@@ -75,14 +76,12 @@
 
 :root.tab-dragging .tab-drop-blocker#tab-drop-blocker-top {
   left: 0;
-  min-height: 1px;
   right: 0;
   top: 0;
 }
 
 :root.tab-dragging .tab-drop-blocker#tab-drop-blocker-right {
   bottom: 0;
-  min-width: 1px;
   right: 0;
   top: 0;
 }
@@ -90,13 +89,11 @@
 :root.tab-dragging .tab-drop-blocker#tab-drop-blocker-bottom {
   bottom: 0;
   left: 0;
-  min-height: 1px;
   right: 0;
 }
 
 :root.tab-dragging .tab-drop-blocker#tab-drop-blocker-left {
   bottom: 0;
   left: 0;
-  min-width: 1px;
   top: 0;
 }
