--- a/webextensions/sidebar/styles/square/plain-color.css
+++ b/webextensions/sidebar/styles/square/plain-color.css
@@ -22,7 +22,7 @@
   color: var(--tab-text);
 }
 
-.tab:not(.active):hover,
+.tab:not(.collapsed):not(.active):hover,
 .after-tabs:not(.active) button:hover {
   background: var(--tab-surface-hover);
   color: var(--tab-text);
