--- a/webextensions/sidebar/styles/throbber.css
+++ b/webextensions/sidebar/styles/throbber.css
@@ -53,12 +53,12 @@
   transform: var(--throbber-scale);
 }
 
-#tabbar .tab:not(.collapsed).loading.unsynchronized .throbber::before {
+#tabbar .tab:not(.collapsed).loading.throbber-unsynchronized .throbber::before {
   mask: -moz-element(#master-throbber) no-repeat;
 }
 
-:root:not(.synchronizing) .tab:not(.collapsed).loading:not(.unsynchronized) .throbber::before,
-:root:not(.synchronizing).have-loading-tab #master-throbber,
+:root:not(.throbber-synchronizing) .tab:not(.collapsed).loading:not(.throbber-unsynchronized) .throbber::before,
+:root:not(.throbber-synchronizing).have-loading-tab #master-throbber,
 :root.blocking-throbber #blocking-screen .throbber::before {
   animation: throbber 1.05s steps(60) infinite;
 }
